--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -6,3 +6,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
 ADD . /repo
 WORKDIR /repo/rs92
 RUN gcc rs92gps.c -lm -o rs92gps
+
+WORKDIR /repo/rs41
+RUN gcc rs41.c -lm -o rs41
+
+WORKDIR /repo/meisei
+RUN gcc meisei_rs.c -lm -o meisei_rs
