Add package stage

--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:20.04
+FROM --platform=linux/amd64 ubuntu:20.04 as builder
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
@@ -12,3 +12,11 @@ RUN gcc rs41.c -lm -o rs41
 
 WORKDIR /repo/meisei
 RUN gcc meisei_rs.c -lm -o meisei_rs
+RUN mkdir -p /deps
+RUN ldd /repo/rs41/rs41 | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+
+FROM ubuntu:20.04 as package
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/rs41/rs41 /repo/rs41/rs41
+ENV LD_LIBRARY_PATH=/deps
