--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -3,7 +3,7 @@ FROM --platform=linux/amd64 ubuntu:20.04 as builder
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
 
-ADD . /repo
+COPY . /repo
 WORKDIR /repo/rs92
 RUN gcc rs92gps.c -lm -o rs92gps
 
@@ -12,11 +12,5 @@ RUN gcc rs41.c -lm -o rs41
 
 WORKDIR /repo/meisei
 RUN gcc meisei_rs.c -lm -o meisei_rs
-RUN mkdir -p /deps
-RUN ldd /repo/rs41/rs41 | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
-
 FROM ubuntu:20.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/rs41/rs41 /repo/rs41/rs41
-ENV LD_LIBRARY_PATH=/deps
+COPY --from=builder /repo/rs41/rs41 /
